--- a/MeanOutliersAfterCurry.qmd
+++ b/MeanOutliersAfterCurry.qmd
@@ -44,9 +44,25 @@ outliers #subset of outliers
 
 ```{r}
 veterans <- draft_data[draft_data$games >= 1000, ]
+veterans <- veterans[!is.na(veterans$X3_point_percentage), ]
 #Veterans whose 3pt percentage falls under the lower bound are listed in the veterans_least_3pt_percentage subset
-veterans_least_3pt_percentage <- veterans[veterans$X3_point_percentage < lower_bound, ]
-veterans_least_3pt_percentage <- veterans_least_3pt_percentage[!is.na(veterans_least_3pt_percentage$X3_point_percentage), ]
+veterans_least_index <- which.min(veterans$X3_point_percentage)
+worst_veteran <- veterans[veterans_least_index, ]
+worst_veteran
+```
 
-veterans_least_3pt_percentage
+```{r}
+library(ggplot2)
+three_pt_scatterplot <- ggplot(veterans, aes(x = average_minutes_played, y = X3_point_percentage)) + 
+  geom_point(color = "blue") +
+  geom_point(data = worst_veteran, aes(x = average_minutes_played, y = X3_point_percentage), color = "red", size = 3) + 
+  labs(title = "3 Point Percentage (After Curry) vs. Average Minutes Played",
+       x = "Average Minutes Played,",
+       y = "3-Point Percentage") + 
+  theme_minimal()
+
+three_pt_scatterplot
+
+
+
 ```
