--- a/FinalProject.qmd
+++ b/FinalProject.qmd
@@ -1,6 +1,10 @@
+#Read in the dataset
 NBA_Players_Draft <- read.csv("/Users/luislopez/Downloads/nbaplayersdraft.csv")
-NBA_Players_Draft
 
 # Grouping based off of Stephen Curry's Draft Year
 players_before_curry <- subset(NBA_Players_Draft, year < 2009)
 players_after_curry <- subset(NBA_Players_Draft, year >= 2009)
+
+#Find mean three point percentage in each group
+mean_3_before_curry <- as.numeric(mean(players_before_curry$X3_point_percentage, na.rm =TRUE))
+mean_3_after_curry <- as.numeric(mean(players_after_curry$X3_point_percentage, na.rm = TRUE))
