--- a/FinalProject.qmd
+++ b/FinalProject.qmd
@@ -1,10 +1,14 @@
 #Read in the dataset
 NBA_Players_Draft <- read.csv("/Users/luislopez/Downloads/nbaplayersdraft.csv")
 
-# Grouping based off of Stephen Curry's Draft Year
+#Grouped based off of Stephen Curry's Draft Year
 players_before_curry <- subset(NBA_Players_Draft, year < 2009)
 players_after_curry <- subset(NBA_Players_Draft, year >= 2009)
 
-#Find mean three point percentage in each group
+#Found mean three point percentage in each group
 mean_3_before_curry <- as.numeric(mean(players_before_curry$X3_point_percentage, na.rm =TRUE))
 mean_3_after_curry <- as.numeric(mean(players_after_curry$X3_point_percentage, na.rm = TRUE))
+
+#Created data for barplot
+group_names <- c("Drafted Before Curry", "Drafted After Curry")
+group_means <- c(mean_3_before_curry, mean_3_after_curry)
