--- a/FinalProject.qmd
+++ b/FinalProject.qmd
@@ -77,6 +77,9 @@ three_pt_scatterplot
 
 
 ```
+
+## Barplot Comparing Means Between Two Groups
+
 ```{r}
 #Created data for barplot
 group_names <- c("Drafted Before Curry", "Drafted After Curry")
