--- a/FinalProject.qmd
+++ b/FinalProject.qmd
@@ -24,7 +24,9 @@ mean_3_after_curry <- as.numeric(mean(players_after_curry$X3_point_percentage, n
 print(paste("Mean Three Point Percentage Before Curry:", mean_3_before_curry))
 print(paste("Mean Three Point Percentage After Curry:", mean_3_after_curry))
 ```
+
 ## Outliers Before Curry
+
 ```{r}
 # Filter players drafted before 2009
 players_before_curry <- subset(NBA_Players_Draft, year < 2009)
@@ -44,9 +46,8 @@ outliers_before_curry <- subset(players_before_curry,
                                 X3_point_percentage < lower_bound | X3_point_percentage > upper_bound)
 
 # Print the outliers
-print(outliers_before_curry)
+head(outliers_before_curry, 10)
 ```
-
 
 ## Outliers After Curry
 
@@ -76,10 +77,11 @@ print(scatter_plot_outliers)
 ```
 
 ## Veterans (1000 games or more) With Largest 3pt Percentage before Curry
+
 ```{r}
 # Subset the data to filter players who played more than 1000 games before 2009
 players_filtered <- subset(NBA_Players_Draft, year < 2009 & games > 1000)
-print(players_filtered)
+head(players_filtered, 10)
 # Find the index of the player with the maximum 3-point percentage
 max_three_index <- which.max(players_filtered$X3_point_percentage)
 
@@ -102,6 +104,7 @@ ggplot(players_filtered, aes(x = points_per_game, y = X3_point_percentage)) +
   theme_minimal()
 
 ```
+
 ## Veterans (1000 games or more) With Smallest 3pt Percentage
 
 ```{r}
@@ -145,3 +148,25 @@ barplot(
   ylim = c(0, max(group_means) * 1.2)
 )
 ```
+
+##Introduction
+
+The question we wanted to ask was whether or not the total average three point percentage over all NBA players has increased or decreased after Stephen Curry was drafted (2009). In order to figure out the answer to this question, we as a group derived the mean, some significant outliers, and finally, represented the data in a barplot to show whether there is a difference or not.
+
+To start, we separated the dataset, “NBA Draft Basketball Player Data 1989-2021” into two groups, one group being the players before Stephen Curry was drafted (start of dataset - 2008), while the second group consisted of all the players after Stephen Curry was drafted, including Curry (2009 - end of dataset).
+
+##Mason’s Part
+
+Mason was assigned the task of finding the mean three point percentage of all NBA players in the after Curry group, as well as any significant outliers that shot way worse or better from three point territory compared to the mean average of the group. He calculated that the mean three point percentage of the after Curry group was 0.2981 (29.81%), and he represented his outliers using a scatter plot. Mason also found the most extreme outlier of the entire dataset and stated it as being Dikembe Mutombo, who had the worst three point percentage amongst the entire dataset which was 0.0000 (0.00%)
+
+##Steve’s Part
+
+Steve, like Mason, was assigned the task of finding the mean three point percentage, as well as any outliers, of all three point percentages for NBA players, this time from the before Curry group. Steve calculated that the average three point percentage of the before Curry group was 0.2534 (25.34%). Steve also found an extreme outlier and stated it as being Kyle Korver, who had the best three point percentage amongst the entire before Curry group, which was 0.4290 (42.9%). He also represented his data with the use of a scatter plot which depicted a relationship of 3-point percentage vs. points per game.
+
+##Luis’s Part
+
+Luis had the task of taking the means derived from the two groups and comparing them with the use of a bar plot. The bar plot in return would yield the answer to our question of whether or not NBA players as a whole have shot better or worse from three after Stephen Curry got drafted versus before he got drafted.
+
+##Conclusion
+
+Our data as a whole shows that NBA players in total have in fact shot better from three after Stephen Curry got drafted compared to before. We kind of had a sense of this going into the project because Steph has revolutionized the game of basketball as a whole and now-a-days kids are favoring their practice of the three point shot over an easier shot like a layup.
